// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom class on table body 1`] = `
<tbody
  className="table-body foo"
/>
`;

exports[`Default render of table body 1`] = `
<tbody
  className="table-body"
/>
`;

exports[`Table body with a couple rows 1`] = `
<tbody
  className="table-body"
>
  <tr>
    <td>
      {"columns":[],"customClasses":{},"draggable":false,"dropType":"","expandable":false,"rowButtons":[],"row":{"id":"foo"},"rowId":"foo","rowSelected":false,"selectedRows":{}}
    </td>
  </tr>
  <tr>
    <td>
      {"columns":[],"customClasses":{},"draggable":false,"dropType":"","expandable":false,"rowButtons":[],"row":{"id":"bar"},"rowId":"bar","rowSelected":false,"selectedRows":{}}
    </td>
  </tr>
</tbody>
`;

exports[`Table body with an expandable row 1`] = `
<tbody
  className="table-body"
>
  <tr>
    <td>
      {"columns":[],"customClasses":{},"draggable":false,"dropType":"","expandable":false,"rowButtons":[],"row":{"id":"foo"},"rowId":"foo","rowSelected":false,"selectedRows":{}}
    </td>
  </tr>
</tbody>
`;

exports[`Table body with an expanded row 1`] = `
<tbody
  className="table-body"
>
  <tr>
    <td>
      <button
        className="table-expand-icon"
        onClick={[Function]}
      />
      {"columns":[],"customClasses":{},"draggable":false,"dropType":"","expandable":true,"rowButtons":[],"row":{"id":"foo"},"rowId":"foo","rowSelected":false,"selectedRows":{}}
    </td>
  </tr>
</tbody>
`;
